<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.javier.abmcontactos.Actividad1">


    <EditText
        android:id="@+id/campoNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nombrePersona"
        android:singleLine="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="textPersonName"
        android:textStyle="bold"
        android:textSize="@dimen/camposConctacto"
        />

    <EditText
        android:id="@+id/campoTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/telefonoPersona"
        android:singleLine="true"
        android:inputType="textPersonName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textStyle="bold"
        android:textSize="@dimen/camposConctacto"/>

    <EditText
        android:id="@+id/campoMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/correoPersona"
        android:singleLine="true"
        android:inputType="textEmailAddress"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textSize="@dimen/camposConctacto"/>

    <EditText
        android:id="@+id/campoDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/descPersona"
        android:singleLine="true"
        android:inputType="textPersonName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textSize="@dimen/camposConctacto"/>

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="158dp"
        android:id="@+id/campoFecha"
        android:scrollbarSize="1dp"
        android:scaleX=".7"
        android:scaleY=".7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/botonSiguiente"
        android:hint="@string/botonSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Siguiente"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/camposConctacto"/>


</LinearLayout>
